# aips-svn

trunk/aipsbase/: CMakeLists.txt  Doxyfile.in  aipsbaseConfig.cmake.in  aipsbaseUse.cmake  aipsbase_config.h.in
trunk/aipsbase/src/: CMakeLists.txt  aipsautovalue.h  aipsautovalueinlines.tpp  aipsdatatraits.h  aipsdistancefunctions.h  aipserror.cpp  aipserror.h  aipsmacros.h  aipsnulltype.h  aipsnumbertraits.cpp  aipsnumbertraits.h  aipsnumeric.h  aipsnumericinlines.tpp  aipsstring.cpp  aipsstring.h  aipstypelist.h  aipsvectordefs.h  aipsvectordefsinlines.tpp  auto_value.h  cbase.cpp  cbase.h  cbinaryfilehandler.cpp  cbinaryfilehandler.h  ccarraydataadapter.cpp  ccarraydataadapter.h  cconverter.cpp  cconverter.h  cdataadapter.cpp  cdataadapter.h  cdatafileserver.cpp  cdatafileserver.h  cdatarange.h  cdataset.cpp  cdataset.h  cdatasetregion.cpp  cdatasetregion.h  cdatasetregion.tpp  cdatasetregioniterator.h  cdatasetregioniterator.tpp  cevent.cpp  (+44 more)
trunk/aipsconvert/: CMakeLists.txt
trunk/aipsconvert/src/: CMakeLists.txt  medconvert.cpp
trunk/aipsfilehandlers/: CMakeLists.txt  Doxyfile.in  FindImageMagickLib.cmake  aipsfilehandlersConfig.cmake.in  aipsfilehandlersUse.cmake  aipsfilehandlers_config.h  aipsfilehandlers_config.h.in
trunk/aipsfilehandlers/src/: CMakeLists.txt  canalyzehandler.cpp  canalyzehandler.h  canalyzeheader.cpp  canalyzeheader.h  ccnthandler.cpp  ccnthandler.h  ccommonimagehandler.cpp  ccommonimagehandler.h  cdatahandler.cpp  cdatahandler.h  cdataheader.cpp  cdataheader.h  cdf3handler.cpp  cdf3handler.h  cdf3header.cpp  cdf3header.h  cinterfileheader.cpp  cinterfileheader.h  citkhandler.cpp  citkhandler.h  csimpledathandler.cpp  csimpledathandler.h  csimpledatheader.cpp  csimpledatheader.h  ctrasterhandler.cpp  ctrasterhandler.h  ctrasterheader.cpp  ctrasterheader.h  cucfhandler.cpp  cucfhandler.h  cvectorfieldhandler.cpp  cvectorfieldhandler.h  cvectorfieldheader.cpp  cvectorfieldheader.h  cvinterfilehandler.cpp  cvinterfilehandler.h  cvtkhandler.cpp  cvtkhandler.h  libid.h  (+2 more)
trunk/aipsfilters/: CMakeLists.txt  Doxyfile.in  aipsfiltersConfig.cmake.in  aipsfiltersUse.cmake  aipsfilters_config.h.in
trunk/aipsfilters/src/: CMakeLists.txt  cedgethinner.cpp  cedgethinner.h  cfieldtoimage.cpp  cfieldtoimage.h  cgaussderivative.cpp  cgaussderivative.h  cgrayleveltransformation.cpp  cgrayleveltransformation.h  chistocompressor.cpp  chistocompressor.h  chistogram.cpp  chistogram.h  chistogram2d.cpp  chistogram2d.h  chysteresis.cpp  chysteresis.h  cnoiseestimator.cpp  cnoiseestimator.h  creducevector.cpp  creducevector.h  cvectorflow.cpp  cvectorflow.h  libid.h
trunk/aipsgui/: CMakeLists.txt
trunk/aipsgui/src/: CMakeLists.txt  aipsinit.cpp  aipsinit.h  cconnectorwidget.cpp  cconnectorwidget.h  cdraglistbox.cpp  cdraglistbox.h  cdragpipeitem.cpp  cdragpipeitem.h  cgraphedge.cpp  cgraphedge.h  cmainwin.cpp  cmainwin.h  cpipeitemwidget.cpp  cpipeitemwidget.h  cpipescroller.cpp  cpipescroller.h  cplugindialog.cpp  cplugindialog.h  cxmlinterpreter.cpp  cxmlinterpreter.h  main.cpp
trunk/aipsgui/src/basicconverters/: CMakeLists.txt  cchannelcombiner.cpp  cchannelcombiner.h  cchannelsplitter.cpp  cchannelsplitter.h  cfieldtochannel.cpp  cfieldtochannel.h  cfieldtoimage.cpp  cfieldtoimage.h  cimagetofield.cpp  cimagetofield.h  creducevector.cpp  creducevector.h  cslicerdialog.cpp  cslicerdialog.h  csliceselector.cpp  csliceselector.h  cswapendianess.cpp  cswapendianess.h  libid.h  plugin.cpp
trunk/aipsgui/src/basicsources/: CMakeLists.txt  cfilesource.cpp  cfilesource.h  cfilesourcedialog.cpp  cfilesourcedialog.h  libid.h  plugin.cpp
trunk/aipsgui/src/basictargets/: CMakeLists.txt  cdisplay.cpp  cdisplay.h  cdisplaydialog.cpp  cdisplaydialog.h  cdisplayvectordialog.cpp  cdisplayvectordialog.h  cdisplayvectorfield.cpp  cdisplayvectorfield.h  cdisplaywindow.cpp  cdisplaywindow.h  cimagewriter.cpp  cimagewriter.h  cimagewriterdialog.cpp  cimagewriterdialog.h  cvectorwindow.cpp  cvectorwindow.h  cviewhistogram.cpp  cviewhistogram.h  cviewhistogramdialog.cpp  cviewhistogramdialog.h  libid.h  plugin.cpp
trunk/aipsgui/src/diffusionfilters/: CMakeLists.txt  chuberfilter.cpp  chuberfilter.h  cpmad1filter.cpp  cpmad1filter.h  cpmad2filter.cpp  cpmad2filter.h  ctukeyfilter.cpp  ctukeyfilter.h  cweickertfilter.cpp  cweickertfilter.h  diffusiondefs.h  libid.h  plugin.cpp
trunk/aipsgui/src/edgedetectors/: CMakeLists.txt  ccentraldifference.cpp  ccentraldifference.h  cfoerstner.cpp  cfoerstner.h  cgaussderivative.cpp  cgaussderivative.h  chysteresis.cpp  chysteresis.h  csobelgradient.cpp  csobelgradient.h  libid.h  plugin.cpp
trunk/aipsgui/src/fieldfilters/: CMakeLists.txt  cdivergence.cpp  cdivergence.h  cedgethinner.cpp  cedgethinner.h  cfieldpartition.cpp  cfieldpartition.h  cvectorflow.cpp  (+3 more)
trunk/evaltool/: CMakeCCompiler.cmake  CMakeCXXCompiler.cmake  CMakeCache.txt  CMakeDirectoryInformation.cmake  CMakeLists.txt  Doxyfile  Makefile  Makefile.cmake  Makefile2  cmake_install.cmake  evaltool.kdevelop  evaltool.kdevelop.filelist  evaltool.kdevelop.pcs  evaltool.kdevses  install_manifest.txt
trunk/evaltool/src/: CMakeCache.txt  CMakeLists.txt  CMakeSystem.cmake  Makefile  cdicecoefficient.cpp  cdicecoefficient.h  cdiscrepancymeasures.cpp  cdiscrepancymeasures.h  chausdorffdistance.cpp  chausdorffdistance.h  cmake_install.cmake  cmeandistance.cpp  cmeandistance.h  core  cregionsize.cpp  cregionsize.h  evaltool  evaltool.cpp
trunk/meshsegmenter/: CMakeLists.txt  Doxyfile
trunk/meshsegmenter/src/: CMakeLists.txt  CVector.cpp  CVector.h  cdatasetcolors.cpp  cdatasetcolors.h  cdiscretemodel.cpp  cdiscretemodel.h  cdummy.cpp  cdummy.h  cglobalprogress.h  cimagedata.cpp  cimagedata.h  cimageloader.cpp  cimageloader.h  cisosurface.cpp  cisosurface.h  ckernelfilter.cpp  ckernelfilter.h  clowpassfilter.cpp  clowpassfilter.h  cmainwindow.cpp  cmainwindow.h  interactormain.cpp  mesh.cpp  mesh.h  meshcomponents.h  renderwindow.cpp  renderwindow.h  renderwindowinteractor.cpp  renderwindowinteractor.h  vtkQtRenderWindowInteractor.h
trunk/reorient/: CMakeLists.txt  main.cpp
(+136 files in other folders)
